[package]
name = "ch01"
version = "0.1.0"
authors = ["wasshoy <404ari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main1"
path = "src/1-1.rs"

[[bin]]
name = "main2"
path = "src/1-2.rs"